# spanner-rss

./: .gitignore  .gitmodules  LICENSE  README.md
experiments/configs/: retwis-lan-tput-lat-uniform.json  retwis-lan-tput-lat-zipf-0.7.json  retwis-local-skew.json  retwis-local-tput-lat-zipf-0.7.json  retwis-wan-skew-zipf-0.5-stay-0.9.json  retwis-wan-skew-zipf-0.7-stay-0.8.json  retwis-wan-skew-zipf-0.7-stay-0.9.json  retwis-wan-skew-zipf-0.9-stay-0.8.json  retwis-wan-skew-zipf-0.9-stay-0.9.json  retwis-wan-skew.json  retwis-wan-tput-lat-zipf-0.5.json  retwis-wan-tput-lat-zipf-0.7.json  retwis-wan-tput-lat-zipf-0.9.json  retwis-wan-tput-lat.json
experiments/lib/: experiment_codebase.py  rss_codebase.py
experiments/plotting/: aggregate_ro_log_plot.R  aggregate_rw_log_plot.R
experiments/utils/: eval_util.py  experiment_util.py  git_util.py  remote_util.py
src/: CMakeLists.txt
src/include/rss/: lib.h
src/lib/: CMakeLists.txt  assert.h  configuration.cc  configuration.h  io_utils.cc  io_utils.h  latency.cc  latency.h  repltransport.cc  repltransport.h  simtransport.cc  simtransport.h  tcptransport.cc  tcptransport.h  transport.cc  transport.h  transportcommon.h  udptransport.cc  udptransport.h
src/replication/: CMakeLists.txt
src/replication/common/: CMakeLists.txt  client.cc  client.h  log.h  replica-inl.h  replica.cc  replica.h
src/replication/ir/: CMakeLists.txt  client.cc  client.h  ir-proto.proto  record.h  replica.cc  replica.h
src/replication/vr/: CMakeLists.txt  client.cc  client.h  replica.cc  replica.h
src/rss/: CMakeLists.txt  lib.cc
src/store/: CMakeLists.txt  server.cc  server.h
src/store/benchmark/async/: CMakeLists.txt  bench_client.cc  bench_client.h  benchmark.cc
src/store/benchmark/async/common/: CMakeLists.txt  key_selector.cc  key_selector.h  uniform_key_selector.cc  uniform_key_selector.h  zipf_key_selector.cc  zipf_key_selector.h
src/store/benchmark/async/common/tests/: key-selector-test.cc
src/store/benchmark/async/retwis/: CMakeLists.txt  add_user.cc  add_user.h  follow.cc  follow.h  get_timeline.cc  get_timeline.h  post_tweet.cc  post_tweet.h  retwis_client.cc  retwis_client.h  retwis_transaction.cc  retwis_transaction.h
src/store/common/: CMakeLists.txt  common-proto.proto  common.cc  common.h  partitioner.cc  partitioner.h  pinginitiator.cc  pinginitiator.h  stats.cc  stats.h  timestamp.cc  timestamp.h  transaction.cc  transaction.h  truetime.cc  truetime.h
src/store/common/backend/: CMakeLists.txt  messageserver.cc  messageserver.h  pingserver.cc  pingserver.h  store.h  txnstore.cc  txnstore.h  versionstore.cc  versionstore.h
src/store/common/frontend/: CMakeLists.txt  async_transaction.h  bufferclient.cc  bufferclient.h  client.h  transaction_utils.cc  transaction_utils.h  txnclient.h
src/store/strongstore/: CMakeLists.txt  client.cc  client.h  common.h  locktable.cc  locktable.h  networkconfig.cc  networkconfig.h  occstore.cc  occstore.h  preparedtransaction.cc  preparedtransaction.h  replicaclient.cc  replicaclient.h  server.cc  server.h  shardclient.cc  shardclient.h  strong-proto.proto  transactionstore.cc  transactionstore.h  waitdie.cc  waitdie.h  woundwait.cc  woundwait.h
src/store/strongstore/tests/: waitdie-test.cc  woundwait-test.cc
src/store/tools/: run_test.sh  shard.tss.config  shard0.config
